--- a/config/lightstrip_esp32_c3_super_mini.yaml
+++ b/config/lightstrip_esp32_c3_super_mini.yaml
@@ -23,7 +23,7 @@ esphome:
       - script.execute: reset_light_on
 
 esp32:
-  board: lolin_c3_mini  # is actually a c3_super_mini
+  board: esp32-c3-devkitm-1  # is actually a c3_super_mini
   variant: esp32c3
   framework:
     type: esp-idf  # "This is an alternative base framework for ESP32 chips, and recommended for variants of the ESP32 like ESP32S2, ESP32S3, ESP32C3 and single-core ESP32 chips."
