--- a/config/lightstrip_esp32_c3_super_mini.yaml
+++ b/config/lightstrip_esp32_c3_super_mini.yaml
@@ -11,6 +11,12 @@ script:
       - light.turn_on:
           id: lightstrip
           brightness: 0%
+  - id: reset_light_on_full
+    mode: queued
+    then:
+      - light.turn_on:
+          id: lightstrip
+          brightness: 99%
 
 esphome:
   name: lightstrip-esp32-c3-super-mini
@@ -111,6 +117,22 @@ binary_sensor:
             light.is_off: lightstrip
           then:
             script.execute: reset_light_on
+          else:
+            script.execute: reset_light_off
+  - platform: gpio
+    id: power_full
+    pin:
+      number: GPIO10
+      mode:
+        input: true
+        pullup: true
+    on_press:
+      then:
+        if:
+          condition:
+            light.is_off: lightstrip
+          then:
+            script.execute: reset_light_on_full
           else:
             script.execute: reset_light_off
 
