--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,6 @@ services:
       - "./config:/config"
       - "/etc/localtime:/etc/localtime:ro"
     restart: "unless-stopped"
-    ports:
-      - "6052:6052"
+    network_mode: host
+#    ports:
+#      - "6052:6052"
